fix with qwen local

--- a/homegenie_app/pubspec.yaml
+++ b/homegenie_app/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared:
+    path: ../shared
 
   # State Management
   flutter_riverpod: ^2.4.0
