--- a/homegenie_partner_app/pubspec.yaml
+++ b/homegenie_partner_app/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared:
+    path: ../shared
+    
   # State Management
   flutter_riverpod: ^2.4.0
   riverpod_annotation: ^2.3.0
