--- a/homegenie_app/pubspec.yaml
+++ b/homegenie_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.2.1
   permission_handler: ^11.0.1
   geolocator: ^10.1.0
+  table_calendar: ^3.0.9
 
   # Forms & Validation
   reactive_forms: ^16.1.1
