--- a/homegenie_partner_app/pubspec.yaml
+++ b/homegenie_partner_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^5.3.2
   retrofit: ^4.0.3
   json_annotation: ^4.8.1
+  supabase_flutter: ^2.5.0
 
   # Local Storage
   hive: ^2.2.3
