--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -199,15 +199,16 @@ otp_expiry = 3600
 # Allow/disallow new user signups via SMS to your project.
 enable_signup = true
 # If enabled, users need to confirm their phone number before signing in.
-enable_confirmations = true
+enable_confirmations = false
 # Template for sending OTP to users
 template = "Your code is {{ .Code }}"
 # Controls the minimum amount of time that must pass before sending another sms otp.
 max_frequency = "5s"
 
 # Use pre-defined map of phone number to OTP for testing.
-# [auth.sms.test_otp]
-# 4152127777 = "123456"
+[auth.sms.test_otp]
+"9999999999" = "123456"
+"+919999999999" = "123456"
 
 # Configure logged in session timeouts.
 # [auth.sessions]
@@ -233,6 +234,11 @@ account_sid = ""
 message_service_sid = ""
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
 auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
+
+[auth.sms.messagebird]
+enabled = true
+originator = "HomeGenie"
+access_key = "test"
 
 # Multi-factor-authentication is available to Supabase Pro plan.
 [auth.mfa]
