--- a/homegenie_partner_app/ios/Runner/Info.plist
+++ b/homegenie_partner_app/ios/Runner/Info.plist
@@ -45,5 +45,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>We need notification permission to alert you of new job opportunities</string>
 </dict>
 </plist>
