--- a/homegenie_app/pubspec.yaml
+++ b/homegenie_app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: homegenie_app
 description: "HomeGenie Customer App - On-demand home services"
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+202510072116
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
