--- a/homegenie_partner_app/pubspec.yaml
+++ b/homegenie_partner_app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: homegenie_partner_app
 description: "HomeGenie Partner App - Service provider management"
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+202510072144
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
