--- a/homegenie_app/pubspec.yaml
+++ b/homegenie_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^5.3.2
   retrofit: ^4.0.3
   json_annotation: ^4.8.1
+  freezed_annotation: ^2.4.1
 
   # Local Storage
   hive: ^2.2.3
@@ -42,6 +43,7 @@ dependencies:
   permission_handler: ^11.0.1
   geolocator: ^10.1.0
   table_calendar: ^3.0.9
+  timezone: ^0.9.2
 
   # Forms & Validation
   reactive_forms: ^16.1.1
@@ -67,6 +69,7 @@ dev_dependencies:
   retrofit_generator: ^8.0.4
   json_serializable: ^6.7.1
   hive_generator: ^2.0.1
+  freezed: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
