--- a/homegenie_partner_app/pubspec.yaml
+++ b/homegenie_partner_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.2.1
   permission_handler: ^11.0.1
   geolocator: ^10.1.0
+  timezone: ^0.9.2
 
   # Forms & Validation
   reactive_forms: ^16.1.1
