--- a/homegenie_partner_app/pubspec.yaml
+++ b/homegenie_partner_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^5.3.2
   retrofit: ^4.0.3
   json_annotation: ^4.8.1
+  freezed_annotation: ^2.4.1
   supabase_flutter: ^2.5.0
 
   # Local Storage
@@ -66,6 +67,7 @@ dev_dependencies:
   riverpod_generator: ^2.3.0
   retrofit_generator: ^8.0.4
   json_serializable: ^6.7.1
+  freezed: ^2.4.5
   hive_generator: ^2.0.1
 
 flutter:
